objects/Alias__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Aliases</relationshipLabel>
        <relationshipName>Aliases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_SFDC_ID__c</fullName>
        <formula>Account_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SFDC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias_Status__c</fullName>
        <label>Alias Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Name</fullName>
                </value>
                <value>
                    <fullName>Former Name</fullName>
                </value>
                <value>
                    <fullName>Name on Annuity Docs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_last_used__c</fullName>
        <label>Date last used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Alias</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Alias ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aliases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>